# rag-w-binary-quant

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: cd-hf.yml
src/: config.py  data_loader.py  embedding_generator.py  rag_pipeline.py  vector_store.py
