[project]
name = "rag-w-binary-quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "isort>=6.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "llama-index>=0.13.0",
    "llama-index-embeddings-huggingface>=0.6.0",
    "numpy>=2.3.2",
    "pymilvus>=2.5.14",
    "gradio>=4.0.0",
    "docx2txt>=0.9",
]
